# hdict

./: .gitignore  README-edit.md  README.md  changelog.txt  pyproject.toml  release.sh
.github/workflows/: test.yml
docs/: appearance.html  applyout.html  aux.html  aux_frozendict.html  cache.html  config.html  customjson.html  empty_.html  expr.html  frozenhdict.html  hdict_.html  hoshfication.html  index.html  indexeddict.html  multioutput.html  pandas_handling.html  pipeline.html  singleton.html
docs/abs/: expr.html  index.html  step.html
docs/content/: apply.html  applyout.html  aux_value.html  default.html  field.html  handling.html  index.html  sample.html  subcontent.html  value.html
docs/content/abs/: abscloneable.html  abscontent.html  abssampleable.html  index.html
docs/content/argument/: apply.html  aux_apply.html  default.html  entry.html  field.html  index.html  sample.html
docs/content/entry/: aux_closure.html  cached.html  closure.html  index.html  lazy.html  subvalue.html  wrapper.html
docs/data/: aux_frozendict.html  dataset.html  empty_.html  frozenhdict.html  hdict_.html  index.html  load.html  self_.html
docs/dataset/: dataset.html  index.html  pandas_handling.html
docs/expression/: expr.html  index.html
docs/expression/step/: applyout.html  cache.html  edict.html  index.html  step.html
docs/persistence/: cache.html  index.html  stored.html
docs/text/: customjson.html  index.html
examples/: intro.py  simple.py
experiments/: ut5.py
src/hdict/: __init__.py  absval.py  appearance.py  apply.py  applyout.py  aux.py  aux_frozendict.py  cache.py  config.py  customjson.py  empty_.py  expr.py  frozenhdict.py  hdict_.py  hoshfication.py  indexeddict.py  lazyval.py  multioutput.py  pandas.py  pandas_handling.py  param.py  pipeline.py  singleton.py  strictval.py  subcontent.py  subval.py  values.py
src/hdict/abs/: __init__.py  expr.py  step.py
src/hdict/content/: __init__.py  apply.py  applyout.py  aux_value.py  closure.py  default.py  field.py  handling.py  sample.py  subcontent.py  value.py
src/hdict/content/abs/: abscloneable.py  abscontent.py  abssampleable.py  any.py  appliable.py  entry.py  pipeable.py  requirements.py  sampling.py  variable.py
src/hdict/content/argument/: __init__.py  apply.py  aux_apply.py  default.py  entry.py  field.py  sample.py
src/hdict/content/entry/: __init__.py  aux_closure.py  cached.py  closure.py  lazy.py  subvalue.py  wrapper.py
src/hdict/content/entry/ready/: __init__.py  closure.py  subvalue.py
src/hdict/content/entry/unready/: __init__.py  delayed.py  missing.py  unsampled.py
src/hdict/data/: aux_frozendict.py  dataset.py  empty_.py  frozenhdict.py  hdict_.py  load.py  self_.py
src/hdict/dataset/: dataset.py  pandas_handling.py
src/hdict/entry/: __init__.py  absarg.py  abscloneable.py  abscontent.py  absnest.py  absnestedarg.py  apply.py  applyout.py  default.py  field.py  handling.py  sample.py  value.py
src/hdict/entry/abs/: __init__.py  abscloneable.py
src/hdict/expression/: expr.py
src/hdict/expression/step/: applyout.py  cache.py  edict.py  step.py
src/hdict/persistence/: cache.py  stored.py
src/hdict/text/: customjson.py
