[tool.poetry]
name = "hdict"
version = "0.230102.0"
description = "Hosh-based cacheable lazy dict with deterministic predictable universally (probabilistically) unique identifiers"
authors = ["davips <dpsabc@gmail.com>"]
license = "GPLv3"
readme = 'README.md'
packages = [
    { include = "hdict", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
hosh = "^1.211228.3"
lazydf = "^0.220726.3"
indexed = "^1.3.0"
lange = "^0.220727.5"

[tool.poetry.dev-dependencies]
autoreadme = "^0.2102.20"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
pdoc3 = "^0.10.0"
pylint = "^2.7.4"

[tool.poetry.group.dev.dependencies]
numpy = "^1.24.1"
sympy = "^1.11.1"
pandas = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
