[tool.poetry]
name = "hdict"
version = "0.230205.3"
description = "A data structure based on a novel identification paradigm useful for computing, experiments, distributed data, among others."
authors = ["davips <dpsabc@gmail.com>"]
license = "GPLv3"
readme = 'README.md'
packages = [
    { include = "hdict", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
indexed = "^1.3.0"  # indexed dict
lange = "^1.230203.2"
# Optional dependencies.
pandas = { version = "^1.5.2", optional = true }
hosh = "^2.230205.2"

[tool.poetry.extras]    #[tool.poetry.group.extras.dependencies]
full = ["pandas"]

[tool.poetry.group.dev.dependencies]
autoreadme = "^0.2102.20"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
pdoc3 = "^0.10.0"
pylint = "^2.7.4"
ipython = "^8.9.0"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
