[tool.poetry]
name = "hdict"
version = "2.240216.1"
description = "A versatile dictionary based on a novel paradigm useful for computing, caching, experiments, distributed data, among others."
authors = ["davips <dpsabc@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [
    { include = "hdict", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
indexed = "^1.3.0"  # indexed dict
lange = "^1.230203.2"

# Optional dependencies.
pandas = { version = "^2.0.0", optional = true }
shelchemy = { version = "^0.220906.3", optional = true }
safeserializer = { version = "^0.230202.1", optional = true }
lz4 = { version = "^4.3.2", optional = true }
scikit-learn = { version = "^1.2.2", optional = true }
liac-arff = { version = "^2.5.0", optional = true }
hosh = "^3.230705.5"

[tool.poetry.extras]    #[tool.poetry.group.extras.dependencies]
full = ["pandas", "shelchemy", "safeserializer", "lz4", "scikit-learn", "liac-arff", "testfixtures"]

[tool.poetry.group.dev.dependencies]
autoreadme = "^0.2102.20"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
pdoc3 = "^0.10.0"
pylint = "^2.7.4"
testfixtures = "^7.1.0"
ipython = "^8.9.0"
pandas = "^2.0.0"
shelchemy = "^0.220906.5"
safeserializer = "^0.230202.1"
lz4 = "^4.3.2"
scikit-learn = "^1.2.2"
liac-arff = "^2.5.0"
pycrunch-engine = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
